Fix form element row spacing

--- a/components/com_jce/editor/tiny_mce/plugins/table/css/table.css
+++ b/components/com_jce/editor/tiny_mce/plugins/table/css/table.css
@@ -8,10 +8,6 @@
     width: 70% !important;
 }
 
-.uk-grid>* {
-    margin-bottom: 5px;
-}
-
 #numcols,
 #numrows {
     width: 50px;
